# Cloud-Object-Recognition-Engine

./: CMakeLists.txt  COREConfig.cmake.in  COREConfigVersion.cmake.in  LICENSE  README.md  core_config.h.in  install.sh
classification/: CMakeLists.txt  classification.doxy
classification/include/core/classification/: predict_svm_covariance_class.h
classification/include/core/classification/svm/: covariance_predict_class.h  svm_covariance_predict_class.h  svm_predict_class.h
classification/src/: predict_svm_covariance_class.cpp
classification/src/svm/: covariance_predict_class.cpp  svm_covariance_predict_class.cpp  svm_predict_class.cpp
cmake/: CMakeParseArguments.cmake  core_all_in_one_installer.cmake  core_coreconfig.cmake  core_cpack.cmake  core_find_boost.cmake  core_find_opencv.cmake  core_find_pcl.cmake  core_options.cmake  core_targets.cmake  core_utils.cmake  cpack_options.cmake.in  dep_graph.cmake  pkgconfig.cmake.in  uninstall_target.cmake.in
common/: CMakeLists.txt  common.doxy
common/include/core/: core_macros.h
common/include/core/console/: parse.h  print.h  time.h
common/src/: parse.cpp  print.cpp
configuration/: CMakeLists.txt  configuration.doxy  core.cfg
configuration/include/core/configuration/: configuration.h
configuration/src/: configuration.cpp
descriptors/: CMakeLists.txt  descriptors.doxy
descriptors/include/core/descriptors/: covariance.h
descriptors/include/core/descriptors/covariance/: covariance.h
descriptors/src/: covariance.cpp
descriptors/src/covariance/: covariance.cpp
doc/doxygen/: CMakeLists.txt  core.doxy  doxyfile.in
features/: CMakeLists.txt  features.doxy
features/include/core/features/: curvatures.h  normals.h  sobel.h
features/src/: curvatures.cpp  normals.cpp  sobel.cpp
filters/: CMakeLists.txt  filters.doxy
filters/include/core/filters/: filter_model.h  filter_plane.h  filter_range.h
filters/src/: filter_model.cpp  filter_plane.cpp  filter_range.cpp
learning/: CMakeLists.txt  learning.doxy
learning/include/core/learning/: learn_svm_covariance_model.h
learning/include/core/learning/svm/: svm_train.h  svm_train_covariances.h  train_covariances.h
learning/src/: learn_svm_covariance_model.cpp
learning/src/svm/: svm_train.cpp  svm_train_covariances.cpp  train_covariances.cpp
ros/src/core_client/: CMakeLists.txt  package.xml
ros/src/core_client/include/core_client/: client_pointcloud_processor.h
ros/src/core_client/launch/: core_client.launch
ros/src/core_client/scripts/: client_pointcloud_xmit.py
ros/src/core_client/src/: client_pointcloud_processor.cpp
ros/src/core_messages/: CMakeLists.txt  package.xml
ros/src/core_messages/msg/: PointCloud.msg
ros/src/core_server/: CMakeLists.txt  package.xml
ros/src/core_server/include/core_server/: server_pointcloud_processor.h
ros/src/core_server/launch/: core_server.launch
ros/src/core_server/scripts/: server_pointcloud_recv.py
ros/src/core_server/src/: server_pointcloud_processor.cpp
segmentation/: CMakeLists.txt  segmentation.doxy
segmentation/include/core/segmentation/: extract_clusters.h
segmentation/src/: extract_clusters.cpp
tools/: CMakeLists.txt
tools/covariance/: compute_covariance.cpp  svm_learn_model.cpp  svm_predict_class.cpp
tools/descriptors/covariance/: compute_covariance.cpp
utils/: CMakeLists.txt  utils.doxy
utils/include/core/utils/: utils.h
utils/src/: utils.cpp
