<?xml version="1.0"?>
<package>
  <name>core_msgs</name>
  <version>0.0.0</version>
  <description>
    The CORE messages package.
  </description>
  <maintainer email="beksi@cs.umn.edu">William J. Beksi</maintainer>
  <license>Apache License Version 2.0</license>

  <author email="beksi@cs.umn.edu">William J. Beksi</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_runtime</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>message_generation</run_depend>
</package>
